tests/fixtures/invalid/dict_ge_bytes.py
# Cannot compare with >= Dict[str, int] and Bytes
x: bool = {"a": 1} >= b"hello"
